<resources>
    <string name="app_name">SearchYou</string>
    <string name="action_settings">Settings</string>
    <string name="userName">username:</string>
    <string name="password">password:</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="title_activity_student_ui">StudentUIActivity</string>
    <string name="recruitsForMe">Recruitment for me</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="major">Major:</string>
    <string name="resume">My Resume:</string>
    <string name="edit">edit</string>
    <string name="candidates">Candidates</string>
    <string name="createRecruitment">create new recruitment</string>
    <string name="searchFor">Search for:</string>
    <string name="Company">Company:</string>
    <string name="tag">tag:</string>
    <string name="description">Description:</string>
    <string name="create">Create</string>
    <string name="tel">Tel:</string>
    <string name="address">Address:</string>
    <string name="userType">userType:</string>
    <string name="apply">apply</string>
<!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_employer">EmployerActivity</string>
    <string name="title_activity_new_recru">NewRecruActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_recru_info">RecruInfoActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
