<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jin.searchyou_version11.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:id="@+id/name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25dp"
            android:layout_toEndOf="@+id/name"
            />

        <TextView
            android:text="@string/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_below="@+id/name"
            android:layout_marginTop="15dp"
            android:id="@+id/tel"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/name"
            android:layout_toEndOf="@+id/tel"
            />


        <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_below="@+id/tel"
            android:layout_marginTop="15dp"
            android:id="@+id/address"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tel"
            android:layout_toEndOf="@+id/address"
            />



        <TextView
            android:text="@string/userType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_below="@+id/address"
            android:layout_marginTop="40dp"
            android:id="@+id/userType"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25dp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/address"
            android:layout_toEndOf="@+id/userType"
            />

        <TextView
            android:text="@string/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_below="@+id/userType"
            android:layout_marginTop="15dp"
            android:id="@+id/userTag"/>



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/userType"
            android:layout_toEndOf="@+id/userTag"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


</RelativeLayout>
